--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,19 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/element-ui@2.15.8/lib/theme-chalk/index.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/quill@1.3.7/dist/quill.core.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/quill@1.3.7/dist/quill.snow.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/quill@1.3.7/dist/quill.bubble.css"
-    />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.8/lib/theme-chalk/index.css">
+    <link rel="stylesheet" href="https://unpkg.com/quill@1.3.7/dist/quill.core.css">
+    <link rel="stylesheet" href="https://unpkg.com/quill@1.3.7/dist/quill.snow.css">
+    <link rel="stylesheet" href="https://unpkg.com/quill@1.3.7/dist/quill.bubble.css"> -->
   </head>
   <body>
     <!-- built files will be auto injected -->
-    <script src="https://unpkg.com/echarts@5.3.2/dist/echarts.min.js"></script>
+    <!-- <script src="https://unpkg.com/echarts@5.3.2/dist/echarts.min.js"></script>
     <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router@3.5.1/dist/vue-router.js"></script>
     <script src="https://unpkg.com/vuex@3.6.2/dist/vuex.js"></script>
@@ -34,13 +22,16 @@
     <script src="https://unpkg.com/element-ui@2.15.8/lib/index.js"></script>
     <script src="https://unpkg.com/quill@1.3.7/dist/quill.js"></script>
     <script src="https://unpkg.com/vue-quill-editor@3.0.6/dist/vue-quill-editor.js"></script>
-    <script src="https://unpkg.com/vuex-persistedstate@3.2.1/dist/vuex-persistedstate.umd.js"></script>
+    <script src="https://unpkg.com/vuex-persistedstate@3.2.1/dist/vuex-persistedstate.umd.js"></script> -->
+    <% for(var js of htmlWebpackPlugin.options.cdn.js){%>
+      <script src="<%=js%>"></script>
+    <%}%>
+
+    <% for(var css of htmlWebpackPlugin.options.cdn.css){%>
+      <link rel="stylesheet" src="<%=css%>"></link>
+    <%}%>
     <noscript>
-      <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
-      >
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
